--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,41 @@
+
+.section-header {
+  text-align: center;
+}
+
 .skills {
-    margin-top: 30px;
-    padding-left: 2rem;
-  }
+  margin-top: 30px;
+  padding-left: 2rem;
+}
 
-  .skills ul {
-    list-style-type: none;
-    padding: 0;
-  }
+.skills h2 {
+  color: #fff;
+  text-align: center;
+}
 
-  .skills li {
-    display: inline-block;
-    margin-right: 10px;
-    background-color: #f1f1f1;
-    padding: 10px 15px;
-    border-radius: 20px;
-    font-size: 14px;
-  }
-  
-  
-  body {
-    overflow-x: hidden;
-  }
+.skills ul {
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
+}
+
+.skills li {
+  display: inline-block;
+  margin-right: 10px;
+  background-color: #444;
+  padding: 10px 15px;
+  border-radius: 20px;
+  font-size: 14px;
+  color: #fff;
+}
+
+
+
+body {
+  overflow-x: hidden;
+}
+.custom-padding {
+  padding: 4rem;
+}
+
 
